[package]
name = "Marketplace"
version = "0.1.0"
description = "Contrato principal"
authors = [
    "Benjamín",
    "Joaquín",
    "Julieta",
    "Sebastián",
]
edition = "2025"

[dependencies]
ink = { version = "5.1.1", default-features = false }
base64ct = "= 1.6.0"

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]

ink-as-dependency = []
e2e-tests = []
