[package]
name = "ReportesView"
version = "0.1.0"
description = "Contrato de estadísticas (solo lectura)"
authors = [
    "Benjamín",
    "Joaquín",
    "Julieta",
    "Sebastián",
]

[dependencies]
ink = { version = "5.1.1", default-features = false }
Marketplace = { path = "..", default-features = false, features = ["ink-as-dependency"] }
base64ct = "= 1.6.0"

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "Marketplace/std"
]
ink-as-dependency = []
e2e-tests = []
